# multiagent-robot-evacuation

./: .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json
dubins/: dubins.cpp  dubins.hpp  utils.hpp
initial_file/: CMakeLists.txt
initial_file/include/: clipper_extensions.hpp  dubins.hpp  models.hpp  vgraph.hpp
initial_file/src/: clipper_extensions.cpp  dubins.cpp  main.cpp  models.cpp  utils.cpp  vgraph.cpp
nodes/: srcipt.sh
nodes/evacuation/: CMakeLists.txt  package.xml
nodes/evacuation/include/: dubins.hpp  models.hpp
nodes/evacuation/src/: evacuation.cpp
nodes/planner/: CMakeLists.txt  package.xml
nodes/planner/include/: clipper_extensions.hpp  models.hpp  vgraph.hpp
nodes/planner/launch/: tentative.py
nodes/planner/src/: dubins.cpp  planner.cpp  vgraph.cpp
nodes/roadmap_generation/: CMakeLists.txt  package.xml
nodes/roadmap_generation/include/: vgraph.hpp
nodes/roadmap_generation/src/: clipper.cpp  clipper_extensions.cpp  roadmap_generation.cpp  vgraph.cpp
nodes/roadmap_msgs/: CMakeLists.txt  package.xml
nodes/roadmap_msgs/msg/: EdgeMsg.msg  NodeMsg.msg  RoadmapMsg.msg
prova_clipper/: prova.cpp
src/evacuation/: CMakeLists.txt  package.xml
src/evacuation/include/: angle_utils.hpp  clipper_extensions.hpp  convex_hull.hpp  coordination.h  coordination.hpp  dubins.hpp  dubins_utils.hpp  environment.hpp  models.hpp  robot.hpp  utils.hpp  vgraph.hpp
src/evacuation/src/: angle_utils.cpp  clipper_extensions.cpp  convex_hull.cpp  coordination.cpp  dubins.cpp  dubins_utils.cpp  environment.cpp  evacuation.cpp  models.cpp  robot.cpp  utils.cpp  vgraph.cpp
