<?xml version="1.0"?>
<package format="3">
    <name>roadmap_msgs</name>
    <version>0.1.0</version>
    <description>Package containing message types for the roadmap publication</description>
    <maintainer email="luca.zardini@studenti.unitn.it">Luca Zardini</maintainer>

    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <build_depend>builtin_interfaces</build_depend>
    <build_depend>std_msgs</build_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>builtin_interfaces</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <test_depend>ament_lint_common</test_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
